2020-12-16  Youenn Fablet  <youenn@apple.com>

        Remove ILBC audio codec as WebRTC audio codec
        https://bugs.webkit.org/show_bug.cgi?id=219912
        <rdar://problem/72302868>

        Reviewed by Eric Carlson.

        * Configurations/libwebrtc.xcconfig:
        * Configurations/libwebrtcpcrtc.xcconfig:
        Compile out ILBC audio codec.

2020-12-16  Youenn Fablet  <youenn@apple.com>

        Make sure to correctly initialize the vpcC configuration in RTCVideoDecoderVTBVP9
        https://bugs.webkit.org/show_bug.cgi?id=219782

        Reviewed by Eric Carlson.

        We need to initialize the configuration record based on the frame header.
        We do so for every key frame.

        * Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderVTBVP9.mm:
        (convertSubsamplingXYToChromaSubsampling):
        (-[RTCVideoDecoderVTBVP9 startDecodeWithNumberOfCores:]):
        (-[RTCVideoDecoderVTBVP9 decode:missingFrames:codecSpecificInfo:renderTimeMs:]):
        (-[RTCVideoDecoderVTBVP9 decodeData:size:timeStamp:]):

2020-12-13  Andy Estes  <aestes@apple.com>

        [Mac] Create a MediaToolbox format reader plug-in for WebM
        https://bugs.webkit.org/show_bug.cgi?id=218908
        <rdar://problem/71373264>

        Reviewed by Eric Carlson.

        * Source/webrtc/sdk/WebKit/CMBaseObjectSPI.h:

2020-12-11  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Add Experimental VP8 support
        https://bugs.webkit.org/show_bug.cgi?id=219732

        Reviewed by Eric Carlson.

        Add a new decoder for VP8 video using the decoder exposed by libwebrtc. Refactor
        WebKitDecoderReceiver into its own file, to be used by both the VP8 and VP9 decoders.

        * Configurations/libwebrtc.iOS.exp:
        * Configurations/libwebrtc.iOSsim.exp:
        * Configurations/libwebrtc.mac.exp:
        * Source/webrtc/sdk/WebKit/WebKitDecoderReceiver.cpp: Added.
        (webrtc::WebKitDecoderReceiver::WebKitDecoderReceiver):